--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.datasource.hikari.password=BTCjava404!@#$
 spring.datasource.hikari.connection-test-query=SELECT 1 
  
 mybatis.configuration.map-underscore-to-camel-case=true
+
+#김동환 테스트
