--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,11 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	//api
+	implementation 'javax.xml.bind:jaxb-api'
+	implementation 'javax.activation:activation:1.1.1' 
+	implementation 'org.glassfish.jaxb:jaxb-runtime'
 }
 
 tasks.named('test') {
