--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 mybatis.configuration.map-underscore-to-camel-case=true
 
 #김동환 테스트
+
+spring.mvc.hiddenmethod.filter.enabled=true
+
+#코비스 서비스 키
+custom.serviceKey=bb337acd8ff9a1fcda9c16e0d0550816
