--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ dependencies {
 	implementation 'javax.xml.bind:jaxb-api'
 	implementation 'javax.activation:activation:1.1.1' 
 	implementation 'org.glassfish.jaxb:jaxb-runtime'
+	//jjh
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
+	implementation group: 'org.json', name: 'json', version: '20211205'
+	
 	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
