게시판 페이징을 위한 build.gradle / application.properties 수정

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -21,3 +21,8 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 #코비스 서비스 키
 custom.serviceKey=bb337acd8ff9a1fcda9c16e0d0550816
+
+#게시판 페이징을 위한 소스
+pagehelper.helper-dialect=mysql
+pagehelper.reasonable=true
+
