--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+	
+	// 게시판 PageHelper
+	implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.1' 
 }
 
 tasks.named('test') {
